# The-Alpha

./: .gitignore  DEPLOYMENT.md  INSTALLATION_GUIDE.txt  README.md  alpha_omega.py  alpha_omega_main.py  api_rate_limiter_cache.py  automation.py  automation_engine.py  build_installer.bat  check_import.py  check_log.txt  config.yaml  create_github_repo.py  diag.py  diag_out.txt  fix_alpha.ps1  install-termux.sh  install.ps1  install.py  install.sh  install_deps.py  intelligence_engine.py  learning_engine.py  openclav_vision.py  openclaw_core.py  openclaw_vision.html  push_to_github.bat  pyproject.toml  requirements-lite.txt  requirements.txt  run_alpha.py  setup.py  start_alpha.bat  startup.py  test_system.py  uninstall.ps1  uninstall.sh  users_voice_db.json  voice_auth.py  (+1 more)
alpha-omega/: automation.py  config.yaml  install.py  intelligence.py  learning_system.py  main.py  memory_system.py  voice_control.py
apps/api/: main.py  pyproject.toml  requirements.txt
apps/api/src/raver_api/: __init__.py  main.py
apps/ui/: package-lock.json  package.json
core/: manifest.txt
smart-agent/: package.json
smart-agent/src/: index.ts
src/agents/: multi_agent_system.py
src/api/: api_gateway.py  web_server.py
src/automation/: __init__.py  automation_engine.py  browser_automation.py  script_generation.py  task_scheduler.py  terminal_master.py  visual_workflow.py  workflow_recorder.py
src/collaboration/: realtime_collab.py
src/core/: __init__.py  command_dispatcher.py  config_manager.py  contextual_awareness.py  debugging_system.py  hybrid_protocol.py  performance.py  power_manager.py  self_extension.py  sleep_daemon.py  system.py  wake_listener.py
src/intelligence/: code_intelligence.py  intelligence_engine.py  llm_provider.py  ollama_integration.py
src/learning/: federated_learning.py  learning_engine.py  predictive_engine.py  screen_recorder.py  skill_library.py  tutorial_processor.py  watch_learn.py
src/memory/: knowledge_graph.py  memory_system.py
src/mobile/: mobile_companion.py
src/plugins/: plugin_manager.py
src/security/: credential_provider.py  file_integrity.py  malware_scanner.py  security_framework.py
src/tutor/: overlay_renderer.py  smart_tutor.py
src/utils/: helpers.py
tests/: test_all.py
web/: index.html
(+37 files in other folders)
